--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Learnig Js</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
-<body>
-    
+<body>       
+    <h1 id="heading">Hello World</h1> 
+    <h2 class="head">Hi</h2> 
+    <script src='domManipulation.js'></script>
 </body>
 </html>
