Event Handling in Js

--- a/Dom Manipulation/index.html
+++ b/Dom Manipulation/index.html
@@ -28,7 +28,7 @@
             <li>Milk</li>
         </ul>
     </div>       
-    <script src='domManipulation.js'></script>
+    <script src='main.js'></script>
 
 </body>
 </html>
