Asynchronous Js - calbacks

--- a/Asynchronus/index.html
+++ b/Asynchronus/index.html
@@ -8,15 +8,15 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     
 </head>
-<body>
-    <label for="inp">Enter "A" for alert</label>
-    <input type="text" id="inp" placeholder="Enter a value">
-    
-    <script src='main.js'></script>
+<body style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+    <label for="">Enter the numbers</label>
+    <input type="text" id="num2" placeholder="num1">
+    <h1>hello</h1>
+    <input type="text" id="num1" placeholder="num2">
+    <label for="" id="res">Result is :</label>
+    <script src="./main.js"></script>
 </body>
 </html>
-
-
 
 
 
