--- a/Event Handling/index.html
+++ b/Event Handling/index.html
@@ -99,6 +99,9 @@
                 console.log("You have clicked Tea")
             }
         })
+        //this adds a event listener to the parent class so that whenever a child class is clicked the due to event bubbling the 
+        //event will rise up to the top of the document.
+
         // -------------------------------
         function colorChange(div){
             div.style.backgroundColor="black"
