--- a/Important Topics/index.html
+++ b/Important Topics/index.html
@@ -8,7 +8,8 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 <body>
-    
+    <h1>Closures</h1>
+    <h1>Hoisting</h1>
     <script src='main.js'></script>
 </body>
 </html>
