--- a/Important Topics/HOF/index.html
+++ b/Important Topics/HOF/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Closures</title>
+    <title>Important topics</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    
 </head>
 <body>
-    <h1>Closures</h1>
-    <h1>Hoisting</h1>
+    <h1>HOF</h1>
     <script src='main.js'></script>
 </body>
 </html>
