--- a/Important Topics/HOF/index.html
+++ b/Important Topics/HOF/index.html
@@ -8,8 +8,11 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     
 </head>
-<body>
+<body style="display: flex; flex-direction: column;">
     <h1>HOF</h1>
+    <input id="text-field" type="text" style="width: 200px;" placeholder="Enter Name">
+    <button id="submit" onclick="generate()"  style="width: 200px;">submit</button>
+    <img style="width: 200px; height: 200px;" id="poke-img"></img>
     <script src='main.js'></script>
 </body>
 </html>
